Modificando SDK do arquivo para gerar Jar executavel